--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h2>Customize your t-shirt</h2>
         <div class="shirt-wrapper">
           <div class="southpark-wrapper">
-            <img class="stan" src="/stan.png" alt="stan" />
-            <img class="eric" src="/eric.png" alt="eric" />
-            <img class="kenny" src="/kenny.png" alt="kenny" />
+            <img class="stan" src="/images/stan.png" alt="stan" />
+            <img class="eric" src="/images/eric.png" alt="eric" />
+            <img class="kenny" src="/images/kenny.png" alt="kenny" />
           </div>
 
           <div class="shape-wrapper">
@@ -56,7 +56,7 @@
               />
             </svg>
           </div>
-          <img class="shirt" src="/tshirt.svg" alt="t-shirt model" />
+          <img class="shirt" src="/images/tshirt.svg" alt="t-shirt model" />
         </div>
         <div class="button" id="button-preview">
           <a href="#">
@@ -69,19 +69,19 @@
         <div class="row-wrapper">
           <div class="char-card">
             <div class="char-wrapper">
-              <img class="char" src="/eric.png" alt="eric" />
+              <img class="char" src="/images/eric.png" alt="eric" />
             </div>
             <h5>eric</h5>
           </div>
           <div class="char-card1">
             <div class="char-wrapper">
-              <img class="char" src="/kenny.png" alt="kenny" />
+              <img class="char" src="/images/kenny.png" alt="kenny" />
             </div>
             <h5>kenny</h5>
           </div>
           <div class="char-card2">
             <div class="char-wrapper">
-              <img class="char" src="/stan.png" alt="stan" />
+              <img class="char" src="/images/stan.png" alt="stan" />
             </div>
             <h5>stan</h5>
           </div>
@@ -92,19 +92,19 @@
         <div class="row-wrapper">
           <div class="shape-card">
             <div class="char-wrapper">
-              <img class="char" src="/triangle.svg" alt="triangle" />
+              <img class="char" src="/images/triangle.svg" alt="triangle" />
             </div>
             <h5>triangle</h5>
           </div>
           <div class="shape-card1">
             <div class="char-wrapper">
-              <img class="char" src="/circle.svg" alt="circle" />
+              <img class="char" src="/images/circle.svg" alt="circle" />
             </div>
             <h5>circle</h5>
           </div>
           <div class="shape-card2">
             <div class="char-wrapper">
-              <img class="char" src="/square.svg" alt="square" />
+              <img class="char" src="/images/square.svg" alt="square" />
             </div>
             <h5>square</h5>
           </div>
@@ -115,19 +115,19 @@
         <div class="row-wrapper">
           <div class="color-card">
             <div class="char-wrapper">
-              <img class="char" src="/cyan.svg" alt="cyan" />
+              <img class="char" src="/images/cyan.svg" alt="cyan" />
             </div>
             <h5>cyan</h5>
           </div>
           <div class="color-card1">
             <div class="char-wrapper">
-              <img class="char" src="/red.svg" alt="red" />
+              <img class="char" src="/images/red.svg" alt="red" />
             </div>
             <h5>red</h5>
           </div>
           <div class="color-card2">
             <div class="char-wrapper">
-              <img class="char" src="/yellow.svg" alt="yellow" />
+              <img class="char" src="/images/yellow.svg" alt="yellow" />
             </div>
             <h5>yellow</h5>
           </div>
