--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <div class="logo-wrapper">
-          <img class="logo" src="/coon.png" alt="logo" />
+          <img class="logo" src="/images/coon.png" alt="logo" />
         </div>
       </nav>
     </header>
